--- a/wingify.html
+++ b/wingify.html
@@ -17967,7 +17967,7 @@ cardCtrl.gaeInstancesError || undefined)">
                                                                                                                                 <!---->
                                                                                                                                 <!---->
                                                                                                                                 <div class="p6n-card-item-secondary p6ntest-resources-gae-instances" ng-if="::cardCtrl.gaeInstancesMsg">
-                                                                                                                                    1.6 Years(Current)
+                                                                                                                                    1.75 Years(Current)
                                                                                                                                 </div>
                                                                                                                                 <!---->
                                                                                                                             </ng-transclude>
@@ -18079,7 +18079,7 @@ cardCtrl.storageBucketsError ||
 cardCtrl.storageBucketsForbidden ||
 undefined)" url="/storage?project=custom-temple-93810&amp;authuser=0" icon="logo-24-shaded:STORAGE_SECTION" target-type="myhome" target-name="resourcesCardCloudStorageLink">
                                                                                                                         <!---->
-                                                                                                                        <a ng-if="::url" href="#" track-type="" track-name="" target="" class="p6n-card-item">
+                                                                                                                        <a style="display: none;" ng-if="::url" href="#" track-type="" track-name="" target="" class="p6n-card-item">
                                                                                                                             <!---->
                                                                                                                             <div class="p6n-card-item-icon-container" ng-if="::!labelText">
                                                                                                                                 <!---->
@@ -18286,8 +18286,8 @@ Tech Lead at Eros Labs
                                                                                                                                 <p class="p6n-card-zero-state-message">
                                                                                                                                 </p>
                                                                                                                                 <ul>
-                                                                                                                                    <li style="margin-bottom: 15px">Got recruited to launch Delhi based team for technology startup from Eros Group.</li>
-                                                                                                                                    <li style="margin-bottom: 15px">Assembled and grew team to 9 engineers and quality assurance professionals.</li>
+                                                                                                                                    <li style="margin-bottom: 15px">Got recruited to launch Delhi-based team for technology startup from Eros Group.</li>
+                                                                                                                                    <li style="margin-bottom: 15px">Assembled and grew the team to 9 engineers and quality assurance professionals.</li>
                                                                                                                                     <li style="margin-bottom: 15px">Formulated design specifications for Healthcare Application and developed the application from ground to top.</li>
                                                                                                                                     <li style="margin-bottom: 15px">Managed milestones and deliverables.</li>
                                                                                                                                     <li style="margin-bottom: 15px">Assisted in code reviews and formulated technology strategies.</li>
@@ -18454,7 +18454,7 @@ IT Consultant to US Startups
                                                                                                                                     <li style="margin-bottom: 15px">Participated in discussions focusing on important business requirements and laid out the roadmaps for the same.</li>
                                                                                                                                     <li style="margin-bottom: 15px">Managed milestones and deliverables.</li>
                                                                                                                                     <li style="margin-bottom: 15px">Organized daily scrums.</li>
-                                                                                                                                    <li style="margin-bottom: 15px">Writing and reviewing code while ensuring upmost quality.</li>
+                                                                                                                                    <li style="margin-bottom: 15px">Writing and reviewing code while ensuring utmost quality.</li>
 
                                                                                                                                 </ul>
                                                                                                                             </ng-transclude>
@@ -18641,7 +18641,7 @@ Ruby on Rails Developer at Vinsol
                                                                         <pan-trace-card project-detail-ctrl="::projectDetailCtrl">
                                                                             <pan-card card-id="trace" show-by-default="cardCtrl.visible()" on-toggle-visibility="cardCtrl.visible(val)">
                                                                                 <!---->
-                                                                                <div class="p6n-card-component p6ntest-card-component-trace
+                                                                                <div style="display: none;" class="p6n-card-component p6ntest-card-component-trace
 p6n-card-enabled" ng-if="panCardCtrl.shouldShowCard()" ng-class="{&#39;p6n-card-disabled&#39;: panCardCtrl.currentVisibilityToggleState}" ng-mouseenter="panCardCtrl.hovered = true" ng-mouseleave="panCardCtrl.hovered = false">
                                                                                     <!---->
                                                                                     <div>
@@ -18913,7 +18913,7 @@ The Letter
                                                                                                                                     <div style="margin-bottom: 15px">
                                                                                                                                         Most Illustrious Proprietor,<br/><br/>
 
-                                                                                                                                        I am currently Tech Lead at Eros Labs(Part incubator, part investment firm backed by Eros Group).
+                                                                                                                                        I am currently Tech Lead at Eros Labs(Part incubator and part investment firm backed by Eros Group).
 
 
                                                                                                                                         I have played different roles during my career, mostly revolving around mobile and web technologies. I have realized that every role was more demanding than the previous one and they required more than more than just being a code geek. Not only that I have been a Code Geek, but at times I would wear different hats labeling Growth Marketer and Product Manager.
@@ -18924,13 +18924,13 @@ The Letter
                                                                                                                                     <ul style="list-style-type:square">
 
                                                                                                                                     <li style="margin-bottom: 15px">I am passionate about building products that have an impact on customers' business as well as users' lives and provide solutions to the real-world problems. Understanding the challenges, combined with practical implementations and technologies, has always been my key to designing and delivering products.</li>
-                                                                                                                                    <li style="margin-bottom: 15px">For almost three years I worked as an IT Consultant and Web Developer with US startups focusing on variety of technologies and different complexity levels of the products.</li>
+                                                                                                                                    <li style="margin-bottom: 15px">For almost three years I worked as an IT Consultant and Web Developer with US startups focusing on a variety of technologies and different complexity levels of the products.</li>
 
                                                                                                                                     <li style="margin-bottom: 15px; display: none;  ">While on papers I am a Tech Lead at Eros Labs, in reality, most of the time I am wearing a mask of a Product Manager who understands tech deeply.</li>
                                                                                                                                     <li style="margin-bottom: 15px">
                                                                                                                                         I am capable of fulfilling a role for any position that requires analysis of business rules and technical skills, I have specific experience in two main areas that are closely related. <br/>
                                                                                                                                         On the analysis side, I am responsible for taking data from different sources, extracting functional requirements and translating them into detailed requirements.<br />
-                                                                                                                                        On the technical side, as a Tech Lead I am responsible for designing the architecture of the product, writing and reviewing code with utmost quality assurance, deploying and managing self scalable hosting infrastructure, leading the team of developers and UI/UX professionals and ensuring deliverables are completed within the given timeline.
+                                                                                                                                        On the technical side, as a Tech Lead, I am responsible for designing the architecture of the product, writing and reviewing code with utmost quality assurance, deploying and managing self-scalable hosting infrastructure, leading the team of developers and UI/UX professionals and ensuring deliverables are completed within the given timeline.
                                                                                                                                     </li>
                                                                                                                                 </ul>
                                                                                                                                 </div>
@@ -21673,7 +21673,7 @@ Why hire me
                                                                                                                             <!---->
                                                                                                                             <!---->
                                                                                                                             <ng-transclude><span>
-Hands-on experience working on various complex web and mobile products/applications.<span class="p6n-color-secondary">
+Hands-on experience working on various complex web and mobile products/applications<span class="p6n-color-secondary">
 <span style="display: none;">(Project ID#<span id="p6ntest-projectdetail-num">
 144154827218</span>)</span>
                                                                                                                                 </span>
