--- a/wingify.html
+++ b/wingify.html
@@ -16968,7 +16968,7 @@
     </style>
 </head>
 
-<body style="min-height: 1950px;" role="application" class="">
+<body style="min-height: 1950px; width: 1300px;" role="application" class="">
     <input style="display: none" id="p6n-history-input">
     <iframe style="display: none" id="p6n-history-iframe" src="http://vipinnagpal.com/Home - TestRoR_files/saved_resource.html"></iframe>
     <div id="p6n-error-dialog" class="modal-dialog p6n-error-dialog" style="display: none;" role="dialog"></div>
@@ -17380,7 +17380,7 @@ platformBarCtrl.widgets.SETTINGS)">
                                                 <div class="goog-inline-block p6n-accountchooser-links" style="-webkit-user-select: none;">
 
                                                     <div class="p6n-profilename p6n-fullname" style="-webkit-user-select: none;">
-                                                        Resume for Wingify</div>
+                                                        Resume</div>
                                                     <span class="p6n-profileemail" style="-webkit-user-select: none;">vipin@eroslabs.co</span>
                                                     <div class="p6n-profilelinks" style="-webkit-user-select: none;">
                                                         <a target="_blank" ng-href="https://accounts.google.com/b/0/ManageAccount?service=cloudconsole" track-as="email" href="https://accounts.google.com/b/0/ManageAccount?service=cloudconsole" style="-webkit-user-select: none;">
@@ -17558,7 +17558,7 @@ WORK
                             <!---->
                             <!---->
                             <span class="p6n-action-bar-title" ng-show="titleCtrl.isTitleShown" role="heading" aria-level="1" has-title="containerCtrl.hasTitle">
-Resume for Wingify
+Resume
 <!---->
 </span>
                             <div class="p6n-action-bar-layout-parent" pan-on-resize="containerCtrl.actionBarResizer.recalculateLayout()" style="position: relative;">
@@ -18916,7 +18916,7 @@ The Letter
                                                                                                                                         I am currently Tech Lead at Eros Labs(Part incubator and part investment firm backed by Eros Group).
 
 
-                                                                                                                                        I have played different roles during my career, mostly revolving around mobile and web technologies. I have realized that every role was more demanding than the previous one and they required more than more than just being a code geek. Not only that I have been a Code Geek, but at times I would wear different hats labeling Growth Marketer and Product Manager.
+                                                                                                                                        I have played different roles during my career, mostly revolving around mobile and web technologies. I have realized that every role was more demanding than the previous one and they required more than just being a code geek.
 
 
 
@@ -19230,7 +19230,7 @@ track by availableChart.type" jfk-model-value="::availableChart.type" chart-id="
                                                                                                                                 <!---->
                                                                                                                                 <!---->
                                                                                                                                 <!---->
-                                                                                                                                <img style="width: 552px;" src="http://vipinnagpal.com/Home - TestRoR_files/chart (1).png">
+                                                                                                                                <img style="width: 415px;" src="http://vipinnagpal.com/Home - TestRoR_files/chart (1).png">
                                                                                                                                 <div style="display:none" chart-type="GAE_SUMMARY" ng-repeat="availableChart in cardCtrl.availableCharts
 track by availableChart.type" ng-if="selectedChart.type === availableChart.type">
                                                                                                                                     <div mon-timeseries-chart="" change="cardCtrl.chartUpdated(chart)" ng-attr-format="{{availableChart.format}}" class="p6n-projectdetail-timeseries-chart">
@@ -19532,7 +19532,7 @@ Technical Skills
                                                                                                                             <li style="margin: -8px 0 16px">Nginx, Puma, Google Cloud Platform, AWS, OpenVPN, Auto-scaling</li>
 
                                                                                                                         </ul>
-                                                                                                                        <img style="width: 552px;" src="http://vipinnagpal.com/Home - TestRoR_files/chart.png">
+                                                                                                                        <img style="width: 415px;" src="http://vipinnagpal.com/Home - TestRoR_files/chart.png">
                                                                                                                         <div style="display:none;" class="p6n-card-chart-item">
                                                                                                                             <ng-transclude>
                                                                                                                                 <pan-card-chart-title class="p6n-projectdetail-chartselector">
@@ -23905,7 +23905,7 @@ p6n-dropdown-meta-unpinned">
                                                             <div class="goog-inline-block p6n-accountchooser-links" style="-webkit-user-select: none;">
 
                                                                 <div class="p6n-profilename p6n-fullname" style="-webkit-user-select: none;">
-                                                                    Resume for Wingify</div>
+                                                                    Resume</div>
                                                                 <span class="p6n-profileemail" style="-webkit-user-select: none;">vipin.itm@gmail.com</span>
                                                                 <div class="p6n-profilelinks" style="-webkit-user-select: none;">
                                                                     <a target="_blank" ng-href="https://accounts.google.com/b/0/ManageAccount?service=cloudconsole" track-as="email" href="https://accounts.google.com/b/0/ManageAccount?service=cloudconsole" style="-webkit-user-select: none;">
