--- a/wingify.html
+++ b/wingify.html
@@ -18916,14 +18916,14 @@ The Letter
                                                                                                                                         I am currently Tech Lead at Eros Labs(Part incubator and part investment firm backed by Eros Group).
 
 
-                                                                                                                                        I have played different roles during my career, mostly revolving around mobile and web technologies. I have realized that every role was more demanding than the previous one and they required more than just being a code geek.
+                                                                                                                                        I have played different roles during my career, mostly revolving around mobile and web technologies. I have realized that every role was more demanding than the previous one and required more than just being a code geek.
 
 
 
                                                                                                                                     </div>
                                                                                                                                     <ul style="list-style-type:square">
 
-                                                                                                                                    <li style="margin-bottom: 15px">I am passionate about building products that have an impact on customers' business as well as users' lives and provide solutions to the real-world problems. Understanding the challenges, combined with practical implementations and technologies, has always been my key to designing and delivering products.</li>
+                                                                                                                                    <li style="margin-bottom: 15px">I am passionate about building products that have an impact on clients' business as well as users' lives and provide solutions to the real-world problems. Understanding the challenges, combined with practical implementations and technologies, has always been my key to designing and delivering products.</li>
                                                                                                                                     <li style="margin-bottom: 15px">For almost three years I worked as an IT Consultant and Web Developer with US startups focusing on a variety of technologies and different complexity levels of the products.</li>
 
                                                                                                                                     <li style="margin-bottom: 15px; display: none;  ">While on papers I am a Tech Lead at Eros Labs, in reality, most of the time I am wearing a mask of a Product Manager who understands tech deeply.</li>
@@ -19230,7 +19230,7 @@ track by availableChart.type" jfk-model-value="::availableChart.type" chart-id="
                                                                                                                                 <!---->
                                                                                                                                 <!---->
                                                                                                                                 <!---->
-                                                                                                                                <img style="width: 415px;" src="http://vipinnagpal.com/Home - TestRoR_files/chart (1).png">
+                                                                                                                                <img style="width: 410px;" src="http://vipinnagpal.com/Home - TestRoR_files/chart (1).png">
                                                                                                                                 <div style="display:none" chart-type="GAE_SUMMARY" ng-repeat="availableChart in cardCtrl.availableCharts
 track by availableChart.type" ng-if="selectedChart.type === availableChart.type">
                                                                                                                                     <div mon-timeseries-chart="" change="cardCtrl.chartUpdated(chart)" ng-attr-format="{{availableChart.format}}" class="p6n-projectdetail-timeseries-chart">
@@ -19532,7 +19532,7 @@ Technical Skills
                                                                                                                             <li style="margin: -8px 0 16px">Nginx, Puma, Google Cloud Platform, AWS, OpenVPN, Auto-scaling</li>
 
                                                                                                                         </ul>
-                                                                                                                        <img style="width: 415px;" src="http://vipinnagpal.com/Home - TestRoR_files/chart.png">
+                                                                                                                        <img style="width: 410px;" src="http://vipinnagpal.com/Home - TestRoR_files/chart.png">
                                                                                                                         <div style="display:none;" class="p6n-card-chart-item">
                                                                                                                             <ng-transclude>
                                                                                                                                 <pan-card-chart-title class="p6n-projectdetail-chartselector">
