--- a/wingify.html
+++ b/wingify.html
@@ -17380,7 +17380,7 @@ platformBarCtrl.widgets.SETTINGS)">
                                                 <div class="goog-inline-block p6n-accountchooser-links" style="-webkit-user-select: none;">
 
                                                     <div class="p6n-profilename p6n-fullname" style="-webkit-user-select: none;">
-                                                        Resume</div>
+                                                        </div>
                                                     <span class="p6n-profileemail" style="-webkit-user-select: none;">vipin@eroslabs.co</span>
                                                     <div class="p6n-profilelinks" style="-webkit-user-select: none;">
                                                         <a target="_blank" ng-href="https://accounts.google.com/b/0/ManageAccount?service=cloudconsole" track-as="email" href="https://accounts.google.com/b/0/ManageAccount?service=cloudconsole" style="-webkit-user-select: none;">
@@ -17558,7 +17558,7 @@ WORK
                             <!---->
                             <!---->
                             <span class="p6n-action-bar-title" ng-show="titleCtrl.isTitleShown" role="heading" aria-level="1" has-title="containerCtrl.hasTitle">
-Resume
+
 <!---->
 </span>
                             <div class="p6n-action-bar-layout-parent" pan-on-resize="containerCtrl.actionBarResizer.recalculateLayout()" style="position: relative;">
@@ -17808,6 +17808,12 @@ Vipin Nagpal
 </span><span class="p6n-card-project-id" id="p6ntest-projectdetail-id"> Email:</span>
                                                                                                                                 <span class="p6n-color-secondary">
 <span id="p6ntest-projectdetail-num">vipin.itm@gmail.com</span>
+</span><span class="p6n-card-project-id" id="p6ntest-projectdetail-id"> Github:</span>
+                                                                                                                                <span class="p6n-color-secondary">
+<span id="p6ntest-projectdetail-num">https://github.com/raw5</span>
+</span><span class="p6n-card-project-id" id="p6ntest-projectdetail-id"> Bitbucket:</span>
+                                                                                                                                <span class="p6n-color-secondary">
+<span id="p6ntest-projectdetail-num">https://bitbucket.org/r5/</span>
                                                                                                                                 </span>
                                                                                                                             </ng-transclude>
                                                                                                                         </div>
@@ -23905,7 +23911,7 @@ p6n-dropdown-meta-unpinned">
                                                             <div class="goog-inline-block p6n-accountchooser-links" style="-webkit-user-select: none;">
 
                                                                 <div class="p6n-profilename p6n-fullname" style="-webkit-user-select: none;">
-                                                                    Resume</div>
+                                                                    </div>
                                                                 <span class="p6n-profileemail" style="-webkit-user-select: none;">vipin.itm@gmail.com</span>
                                                                 <div class="p6n-profilelinks" style="-webkit-user-select: none;">
                                                                     <a target="_blank" ng-href="https://accounts.google.com/b/0/ManageAccount?service=cloudconsole" track-as="email" href="https://accounts.google.com/b/0/ManageAccount?service=cloudconsole" style="-webkit-user-select: none;">
