--- a/wingify.html
+++ b/wingify.html
@@ -17807,10 +17807,10 @@ Vipin Nagpal
 <span id="p6ntest-projectdetail-num">+91 999 022 2687</span><br/>
 </span><span class="p6n-card-project-id" id="p6ntest-projectdetail-id"> Email:</span>
                                                                                                                                 <span class="p6n-color-secondary">
-<span id="p6ntest-projectdetail-num">vipin.itm@gmail.com</span>
+<span id="p6ntest-projectdetail-num">vipin.itm@gmail.com</span><br/>
 </span><span class="p6n-card-project-id" id="p6ntest-projectdetail-id"> Github:</span>
                                                                                                                                 <span class="p6n-color-secondary">
-<span id="p6ntest-projectdetail-num">https://github.com/raw5</span>
+<span id="p6ntest-projectdetail-num">https://github.com/raw5</span><br/>
 </span><span class="p6n-card-project-id" id="p6ntest-projectdetail-id"> Bitbucket:</span>
                                                                                                                                 <span class="p6n-color-secondary">
 <span id="p6ntest-projectdetail-num">https://bitbucket.org/r5/</span>
