--- a/wingify.html
+++ b/wingify.html
@@ -17810,10 +17810,10 @@ Vipin Nagpal
 <span id="p6ntest-projectdetail-num">vipin.itm@gmail.com</span><br/>
 </span><span class="p6n-card-project-id" id="p6ntest-projectdetail-id"> Github:</span>
                                                                                                                                 <span class="p6n-color-secondary">
-<span id="p6ntest-projectdetail-num">https://github.com/raw5</span><br/>
+<span id="p6ntest-projectdetail-num"><a href="https://github.com/raw5">https://github.com/raw5</a></span><br/>
 </span><span class="p6n-card-project-id" id="p6ntest-projectdetail-id"> Bitbucket:</span>
                                                                                                                                 <span class="p6n-color-secondary">
-<span id="p6ntest-projectdetail-num">https://bitbucket.org/r5/</span>
+<span id="p6ntest-projectdetail-num"><a href="https://bitbucket.org/r5/">https://bitbucket.org/r5/</a></span>
                                                                                                                                 </span>
                                                                                                                             </ng-transclude>
                                                                                                                         </div>
