--- a/wingify.html
+++ b/wingify.html
@@ -17804,10 +17804,10 @@ Vipin Nagpal
                                                                                                                             <ng-transclude><span>
 </span><span class="p6n-card-project-id" id="p6ntest-projectdetail-id"> Mobile</span>
                                                                                                                                 <span class="p6n-color-secondary">
-<span id="p6ntest-projectdetail-num">+91 999 022 2687</span><br/>
+<span id="p6ntest-projectdetail-num"><a href="tel:9990222687">+91 999 022 2687</a></span><br/>
 </span><span class="p6n-card-project-id" id="p6ntest-projectdetail-id"> Email:</span>
                                                                                                                                 <span class="p6n-color-secondary">
-<span id="p6ntest-projectdetail-num">vipin.itm@gmail.com</span><br/>
+<span id="p6ntest-projectdetail-num"><a href="mailto:vipin.itm@gmail.com">vipin.itm@gmail.com</a></span><br/>
 </span><span class="p6n-card-project-id" id="p6ntest-projectdetail-id"> Github:</span>
                                                                                                                                 <span class="p6n-color-secondary">
 <span id="p6ntest-projectdetail-num"><a href="https://github.com/raw5">https://github.com/raw5</a></span><br/>
