--- a/Novorésumé _ Résumé Editor.html
+++ b/Novorésumé _ Résumé Editor.html
@@ -17,6 +17,10 @@
     visibility: hidden;
   }
 
+  #yna_yszkpa_x{
+    position: absolute !important;
+    top: 0 !important;
+  }
   #yna_xwskhpa_x{
     max-width: 1190px !imporatnt;
     position: static !important;
