--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-vipin.itm@gmail.com
+<iframe id="myframe" src="http://vipinitm.wixsite.com/snapworks" style="border: 0; width: 100%; height: 100%">Your browser doesn't support our website.</iframe>
